--- a/app/src/main/res/layout/fragment_gdtb_add.xml
+++ b/app/src/main/res/layout/fragment_gdtb_add.xml
@@ -253,13 +253,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gdtb_down_bg"
         android:gravity="center">
         <LinearLayout
             android:id="@+id/ll_gdtb_add_photo"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="80px"
+            android:layout_height="100px"
+            android:background="@drawable/gdtb_down_bg"
             android:orientation="horizontal"
             android:gravity="center">
             <ImageView
@@ -277,6 +277,8 @@
 
         <LinearLayout
             android:id="@+id/ll_gdtb_add_save"
+            android:layout_marginLeft="5px"
+            android:background="@drawable/gdtb_down_bg"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="100px"
@@ -297,6 +299,8 @@
 
         <LinearLayout
             android:id="@+id/ll_gdtb_add_commit"
+            android:layout_marginLeft="5px"
+            android:background="@drawable/gdtb_down_bg"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="100px"
