--- a/app/src/main/res/layout/fragment_yhpj.xml
+++ b/app/src/main/res/layout/fragment_yhpj.xml
@@ -3,5 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EAF1F9">
-
+<RatingBar
+    android:id="@+id/ratingbar_yhpj_xysj"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:numStars="5"
+    android:rating="1"
+    android:stepSize="1"
+    style="@style/roomRatingBar"
+    />
 </LinearLayout>
