--- a/app/src/main/res/layout/fragment_gdcl.xml
+++ b/app/src/main/res/layout/fragment_gdcl.xml
@@ -59,6 +59,8 @@
 
     <ListView
         android:id="@+id/listview_gdcl"
+        android:divider="@drawable/dash_listview_divier"
+        android:dividerHeight="2dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
