--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,14 +8,14 @@
     tools:context="com.yf.bx.tms.activity.LoginActivity">
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="@dimen/login1"
         android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/loginLayout1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="260dp"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/login2"
             android:background="@drawable/login_back">
@@ -102,9 +102,9 @@
                 style="@style/item"
                 android:layout_below="@id/pwd_lay"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/login5"
+                android:layout_marginTop="7dp"
                 android:checked="true"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:text="记住密码"
                 android:textColor="@color/gray"
                 />
