--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
 </FrameLayout>
    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="10px"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
@@ -73,13 +74,15 @@
            android:orientation="vertical">
     <ImageView
      android:id="@+id/iv_userphoto"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
+     android:layout_width="200px"
+     android:layout_height="240px"
         android:layout_gravity="right"
+        android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher"/>
            <LinearLayout
                android:layout_width="match_parent"
-               android:layout_height="match_parent"
+               android:layout_height="0dp"
+               android:layout_weight="1"
                android:background="#00A796"
                android:orientation="vertical">
                <TextView
@@ -88,6 +91,7 @@
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
+                   android:layout_marginRight="10px"
                    android:text="王宏伟"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
@@ -97,6 +101,7 @@
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
+                   android:layout_marginRight="10px"
                    android:text="运维检修"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
@@ -105,6 +110,7 @@
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
+                   android:layout_marginRight="10px"
                    android:gravity="right"
                    android:text="0531-12345678"
                    android:textSize="18sp"
@@ -131,7 +137,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@drawable/dash_listview_divier"
-            android:dividerHeight="5dp"
+            android:dividerHeight="2dp"
             android:layerType="software">
         </ListView>
        </LinearLayout>
