--- a/app/src/main/res/layout/fragment_gdcl_cl.xml
+++ b/app/src/main/res/layout/fragment_gdcl_cl.xml
@@ -49,10 +49,10 @@
         <TextView
             android:layout_marginTop="5px"
             android:id="@+id/tv_gdcl_cl_wtms2"
-            android:layout_below="@id/tv_gdcl_cl_wtbt2"
+            android:layout_below="@id/tv_gdcl_cl_wtbt"
             android:layout_alignRight="@id/tv_gdcl_cl_wtbt2"
             android:layout_width="wrap_content"
-            android:layout_height="60px"
+            android:layout_height="50px"
             android:text="问题描述:"
             android:drawableLeft="@drawable/xingxing"
             android:textColor="#3171AF"
@@ -61,9 +61,9 @@
             android:textSize="18sp"/>
         <EditText
             android:layout_marginTop="5px"
-            android:maxLength="100"
+            android:maxLength="80"
             android:layout_toRightOf="@id/tv_gdcl_cl_wtms2"
-            android:layout_below="@id/tv_gdcl_cl_wtbt2"
+            android:layout_below="@id/tv_gdcl_cl_wtbt"
             android:id="@+id/tv_gdcl_cl_wtms"
             android:layout_width="wrap_content"
             android:layout_alignRight="@id/tv_gdcl_cl_wtlx"
@@ -75,7 +75,7 @@
             android:layout_below="@id/tv_gdcl_cl_wtms"
             android:layout_alignRight="@id/tv_gdcl_cl_wtbt2"
             android:layout_width="wrap_content"
-            android:layout_height="60px"
+            android:layout_height="50px"
             android:text="联系人:"
             android:drawableLeft="@drawable/xingxing"
             android:textColor="#3171AF"
@@ -302,34 +302,47 @@
             android:id="@+id/tv_gdcl_cl_jjbf"
             android:layout_alignRight="@id/spinner_gdcl_cl_cljg"
             android:layout_width="wrap_content"
-            android:layout_height="100px"
+            android:layout_height="90px"
             android:maxLength="20"
             android:background="@drawable/tv_bg"/>
 
     </RelativeLayout>
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginTop="10px"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_gdcl_cl_savephoto"
+            android:layout_marginLeft="5px"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent" />
+    <TextView
         android:id="@+id/tv_gdcl_hxcl"
-        android:layout_marginLeft="20px"
+        android:layout_marginLeft="10px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/gdtb_down_bg"
-        android:layout_gravity="right"
+        android:layout_gravity="center_vertical"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:text="后续处理"/>
-
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10px"
         android:gravity="center">
         <LinearLayout
             android:id="@+id/ll_gdtb_add_photo"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="70px"
+            android:layout_height="50px"
+            android:layout_marginLeft="50px"
             android:background="@drawable/gdtb_down_bg"
             android:orientation="horizontal"
             android:gravity="center">
@@ -352,7 +365,7 @@
             android:background="@drawable/gdtb_down_bg"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="70px"
+            android:layout_height="50px"
             android:orientation="horizontal"
             android:gravity="center">
             <ImageView
@@ -374,7 +387,7 @@
             android:background="@drawable/gdtb_down_bg"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="70px"
+            android:layout_height="50px"
             android:orientation="horizontal"
             android:gravity="center">
             <ImageView
