--- a/app/src/main/res/layout/fragment_gdtb_add.xml
+++ b/app/src/main/res/layout/fragment_gdtb_add.xml
@@ -125,13 +125,16 @@
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
             android:textSize="18sp"/>
-        <EditText
+        <TextView
             android:layout_marginTop="5px"
             android:layout_toRightOf="@id/tv_gdtb_add_wtfssj2"
             android:layout_below="@id/tv_gdtb_add_lxr"
             android:id="@+id/tv_gdtb_add_wtfssj"
             android:layout_width="460px"
             android:layout_height="60px"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:gravity="center_vertical"
             android:background="@drawable/tv_bg"/>
         <TextView
             android:layout_marginTop="5px"
