--- a/app/src/main/res/layout/activity_xxbg.xml
+++ b/app/src/main/res/layout/activity_xxbg.xml
@@ -33,12 +33,21 @@
             android:layout_gravity="center_vertical"/>
         <ImageButton
             android:id="@+id/ib_xxbg_wwyt"
-            android:layout_marginLeft="600px"
+            android:layout_marginLeft="500px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transfer"
             android:layout_gravity="center_vertical"
+            android:visibility="invisible"
             android:src="@drawable/wwyt"/>
+        <ImageButton
+            android:layout_marginLeft="10px"
+            android:id="@+id/ib_xxbg_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transfer"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/xxbg_search"/>
         <TextView
             android:layout_marginLeft="10px"
             android:id="@+id/tv_gdtb_notice"
@@ -46,9 +55,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="          0"
+            android:text="     0"
             android:textColor="@color/white"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:textSize="18sp"
             android:background="@drawable/tip"/>
     </LinearLayout>
