--- a/app/src/main/res/layout/fragment_gdtb.xml
+++ b/app/src/main/res/layout/fragment_gdtb.xml
@@ -10,11 +10,16 @@
     android:background="@drawable/gdtb_title"
     android:gravity="center_vertical">
     <CheckBox
+        android:id="@+id/cb_gdtb"
         android:layout_marginLeft="5px"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="全选"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"
+        />
     <TextView
-        android:layout_width="200px"
+        android:layout_marginLeft="8px"
+        android:layout_width="180px"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="问题标题"
@@ -28,7 +33,7 @@
         android:textSize="16sp"
         android:textColor="@color/white"/>
     <TextView
-        android:layout_width="200px"
+        android:layout_width="180px"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="联系电话"
