--- a/app/src/main/res/layout/listview_gdps_item.xml
+++ b/app/src/main/res/layout/listview_gdps_item.xml
@@ -102,7 +102,9 @@
             <TextView
                 android:id="@+id/tv_gdps_item_wtms"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:singleLine="false"
                 android:textSize="17sp"/>
         </LinearLayout>
         <LinearLayout
