--- a/app/src/main/res/layout/listview_gdtb_item.xml
+++ b/app/src/main/res/layout/listview_gdtb_item.xml
@@ -11,6 +11,7 @@
         android:gravity="center"/>
 
     <LinearLayout
+        android:layout_marginLeft="20px"
         android:layout_width="200px"
         android:layout_height="60px"
         android:orientation="horizontal"
